<resources>
    <string name="app_name">会议席位</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_new_password">新密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">邮箱格式不正确</string>
    <string name="error_invalid_password">请输入6位数以上的密码</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_incorrect_user_or_password">账号或密码错误</string>
    <string name="error_field_required">请输入账号</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="button_save_local">保存本地</string>
    <string name="button_save_server">保存服务器</string>
    <string name="button_screenshot_notation">截图批注</string>
    <string name="button_start_screen">发起同屏</string>
    <string name="button_stop_screen">停止同屏</string>
    <string name="button_start_projection">发起投影</string>
    <string name="button_stop_projection">停止投影</string>
    <string name="button_pre_page">上一张</string>
    <string name="button_next_page">下一张</string>
    <string name="text_call_server">呼叫服务</string>
    <string name="text_shortcuts">快捷方式</string>
    <string name="screen_title">同屏控制</string>
    <string name="member">参会人</string>
    <string name="allmember">所有参会人</string>
    <string name="chooseMember">选择参会人</string>
    <string name="project">投影机</string>
    <string name="allproject">所有投影机</string>
    <string name="chooseProject">选择投影机</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="allchoose">全选</string>
    <string name="allchoose_count">全选(%1$s)</string>
    <string name="watch">观看</string>
    <string name="canWatch">可观看的屏幕</string>
    <string name="member_screen">参会人屏幕</string>
    <string name="pro_screen">投影机屏幕</string>
    <string name="send">发送</string>
    <string name="export_file">导出资料</string>
    <string name="number">序号</string>
    <string name="file_name">文件名</string>
    <string name="size">大小</string>
    <string name="upload">上传</string>
    <string name="pre_pape">上一页</string>
    <string name="next_pape">下一页</string>
    <string name="count">数量</string>
    <string name="document">文档</string>
    <string name="picture">图片</string>
    <string name="video">视频</string>
    <string name="other">其它</string>
    <string name="look">查看</string>
    <string name="download">下载</string>
    <string name="batch_download">下载</string>
    <string name="push_file">文件推送</string>
    <string name="import_file">导入文件</string>
    <string name="import_">导入</string>
    <string name="document_postil">文档批注</string>
    <string name="picture_postil">图片批注</string>
    <string name="name">姓名</string>
    <string name="signin_time">签到时间</string>
    <string name="signin_state">签到状态</string>
    <string name="signin_type">签到方式</string>
    <string name="paper">纸</string>
    <string name="pen">笔</string>
    <string name="tea">茶水</string>
    <string name="water">矿泉水</string>
    <string name="calculate">计算器</string>
    <string name="waiter">服务员</string>
    <string name="sweep">清扫</string>
    <string name="teach">技术员</string>
    <string name="video_list">视频直播列表</string>
    <string name="pelette_exit">退出</string>
    <string name="pelette_start_postil">发起批注</string>
    <string name="pelette_stop_postil">停止批注</string>
    <string name="can_join">可加入同屏</string>
    <string name="button_exit">退出</string>
    <string name="button_clean">清空</string>
    <string name="button_save">保存</string>
    <string name="button_back">撤销</string>
    <string name="button_color">颜色</string>
    <string name="button_typeface">字体</string>
    <string name="button_round">圆形</string>
    <string name="button_rect">矩形</string>
    <string name="button_line">直线</string>
    <string name="button_sline">曲线</string>
    <string name="button_paint">铅笔</string>
    <string name="button_text">文本</string>
    <string name="button_erase">橡皮</string>
    <string name="button_drag">拖动</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="pre_topic">上一题</string>
    <string name="submit">提交</string>
    <string name="next_topic">下一题</string>
    <string name="load_to">转到</string>
    <string name="please_enter_file_name">请输入文件名</string>
    <string name="save_server">批注上传</string>
    <string name="save_local">保存本地</string>
    <string name="start_screen">开始同屏</string>
    <string name="stop_screen">停止同屏</string>
    <string name="Please_enter_valid_file_name">请输入文件名（不需要输入后缀）</string>
    <string name="agenda">会议议程</string>
    <string name="meeting_note">会议笔记</string>
    <string name="watch_live">观看直播</string>
    <string name="secretary">秘书</string>
    <string name="stop_watching">停止观看</string>
    <string name="Stop_with_the_screen">停止同屏</string>
    <string name="Stop_the_projection">停止投影</string>
    <string name="no_permission">您没有权限这么做</string>
    <string name="slelct_online_equipment">请选择在线的设备</string>
    <string name="only_can_watch_their_equipment">只能观看他人的设备</string>
    <string name="into_meeting">进入会议</string>
    <string name="setting">系统设置</string>
    <string name="unbounded_attendees">未绑定参会人</string>
    <string name="no_searched_meeting">没有查找到会议</string>
    <string name="click_quit_the_application_again">再次点击退出应用</string>
    <string name="current_meeting">当前会议：</string>
    <string name="member_coord">参会人：</string>
    <string name="speaker">主讲人：</string>
    <string name="in_the_screen_recording">当前已经在录制中</string>
    <string name="keyboard">软键盘</string>
    <string name="handwritten">手写</string>
    <string name="postil">批注</string>
    <string name="call_service">呼叫服务</string>
    <string name="launch_screen">发起同屏</string>
    <string name="join_screen">加入同屏</string>
    <string name="start_pro">发起投影</string>
    <string name="go_back">返回</string>
    <string name="view_details">查看详情</string>
    <string name="multiple_choice">（多选, %1$s）</string>
    <string name="the_radio">（单选, %1$s）</string>
    <string name="five_select_four">（5选4, %1$s）</string>
    <string name="five_select_three">（5选3, %1$s）</string>
    <string name="five_select_two">（5选2, %1$s）</string>
    <string name="three_select_two">（3选2, %1$s）</string>
    <string name="tip_select_device">请先选择设备</string>
    <string name="tip_select_member">请先选择参会人</string>
    <string name="tip_too_many_words">输入的字数不得大于300字</string>
    <string name="tip_please_enter_message">请输入消息文本</string>
    <string name="tip_operation_failed">操作失败</string>
    <string name="tip_most_can_choose">最多可选择%1$s个选项</string>
    <string name="tip_most_can_choose_one">一次最多可推送1个文件</string>
    <string name="tip_no_screen_permissions">您没有同屏操作权限</string>
    <string name="tip_no_screen_can_join">没有可加入的同屏</string>
    <string name="tip_no_projection_permissions">您没有投影操作权限</string>
    <string name="tip_you_have_submitted">您已提交过了</string>
    <string name="tip_no_camera">没有找到摄像头</string>
    <string name="tip_vote_must_be_initiated_state">投票必须是发起状态</string>
    <string name="tip_the_end">主持人结束了%1$s投票</string>
    <string name="tip_export_success">导出至 %1$s 目录下</string>
    <string name="tip_file_name_unlawfulness">该文件名称非法</string>
    <string name="tip_save_as">保存在%1$s</string>
    <string name="tip_repulse_join">%1$s拒绝加入</string>
    <string name="tip_join_the_sharing">加入了共享</string>
    <string name="tip_exit_the_shared">退出了共享</string>
    <string name="tv_whether_agree_to_open_camera">是否同意开启摄像头?</string>
    <string name="tv_modify_configuration_information">修改配置信息</string>
    <string name="tv_fill_information">填写个人信息</string>
    <string name="tv_company_info">公司：</string>
    <string name="tv_name_info">姓名：</string>
    <string name="tv_job_info">职位：</string>
    <string name="tv_phone_info">电话：</string>
    <string name="tv_email_info">邮箱：</string>
    <string name="button_login">登录</string>
    <string name="button_binding_member">绑定参会人</string>
    <string name="button_create_new">新建</string>
    <string name="button_open_front">开启前置</string>
    <string name="button_open_rear">开启后置</string>
    <string name="button_front_camera">前置</string>
    <string name="button_shooting">拍摄</string>
    <string name="button_rear_camera">后置</string>
    <string name="button_play_or_pause">播放/暂停</string>
    <string name="button_stop">停止</string>
    <string name="button_screenshot">截图</string>
    <string name="button_launch_vote">发起投票</string>
    <string name="button_stop_vote">结束投票</string>
    <string name="button_result_query">结果查询</string>
    <string name="button_export_result">结果导出</string>
    <string name="button_scan">扫码</string>
    <string name="button_export">导出</string>
    <string name="button_options">选项</string>
    <string name="title_code_to_join_the_meeting">扫码加入会议</string>
    <string name="title_whether_to_scan_join">是否扫码加入？</string>
    <string name="fun_text_meet_file_data">会议资料</string>
    <string name="fun_text_share_file">共享文件</string>
    <string name="fun_text_postil_file">查看批注</string>
    <string name="fun_text_meet_chat">会议交流</string>
    <string name="fun_text_live_video">视频直播</string>
    <string name="fun_text_white_board">电子白板</string>
    <string name="fun_text_web_net">网页浏览</string>
    <string name="fun_text_questionnaire_survey">问卷调查</string>
    <string name="fun_text_sign_in">签到信息</string>
    <string name="fun_text_camera_control">外部文档</string>
    <string name="file_acquisition_exception">文件获取异常</string>
    <string name="get_file_path_fail">获取文件失败</string>
    <string name="out_of_share">当前不在共享中</string>
    <string name="binding_meeting">已绑定会议</string>
    <string name="platform_is_not_yet_initialized">平台还未初始化完成</string>
    <string name="goto_open_network">无网络连接,是否前往开启?</string>
    <string name="goto_open_permissions">需要开启悬浮窗,是否前往开启权限?</string>
    <string name="exit_app">退出应用</string>
    <string name="to_open">前往开启</string>
    <string name="local_device_id">本机设备ID | %1$s</string>
    <string name="local_device_name">席位: %1$s</string>
    <string name="Click_exit_again">再次点击退出</string>
    <string name="join_white_board">是否同意加入%1$s发起的共享批注?</string>
    <string name="notice_info">公告通知</string>
    <string name="signed_in">已签到</string>
    <string name="not_sign_in">未签到</string>
    <string name="default_str" />
    <string name="direct_sign_in">直接签到</string>
    <string name="local_pwd_sign_in">个人密码签到</string>
    <string name="photo_sign_in">拍照(手写)签到</string>
    <string name="meeting_pwd_sign_in">会议密码签到</string>
    <string name="mandatory">强制</string>
    <string name="same_screen_permission">同屏权限</string>
    <string name="projection_permission">投影权限</string>
    <string name="upload_permission">上传权限</string>
    <string name="download_permission">下载权限</string>
    <string name="vote_permission">投票权限</string>
    <string name="add_same_screen_permission">添加同屏权限</string>
    <string name="add_projection_permission">添加投影权限</string>
    <string name="add_upload_permission">添加上传权限</string>
    <string name="add_download_permission">添加下载权限</string>
    <string name="add_vote_permission">添加投票权限</string>
    <string name="cancel_same_screen_permission">取消同屏权限</string>
    <string name="cancel_projection_permission">取消投影权限</string>
    <string name="cancel_upload_permission">取消上传权限</string>
    <string name="cancel_download_permission">取消下载权限</string>
    <string name="cancel_vote_permission">取消投票权限</string>
    <string name="saved_offline">离线缓存</string>
    <string name="meet_id">会议ID</string>
    <string name="meet_name">会议名称</string>
    <string name="meet_state">会议状态</string>
    <string name="meet_room_name">会议室名称</string>
    <string name="meet_start_time">开始时间</string>
    <string name="meet_end_time">结束时间</string>
    <string name="member_name">预约人</string>
    <string name="secrecy">保密</string>
</resources>