<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/postil_image"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="10" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/popEditTextColor"
        android:orientation="vertical">

        <Button
            android:id="@+id/postil_save_local"
            style="@style/btn_style_pressend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:text="@string/button_save_local" />

        <Button
            android:id="@+id/postil_save_server"
            style="@style/btn_style_pressend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:text="@string/button_save_server" />

        <Button
            android:id="@+id/postil_pic"
            style="@style/btn_style_pressend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:text="@string/button_screenshot_notation" />

        <Button
            android:id="@+id/postil_start_screen"
            style="@style/btn_style_pressend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:text="@string/button_start_screen" />

        <Button
            android:id="@+id/postil_stop_screen"
            style="@style/btn_style_pressend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:text="@string/button_stop_screen" />

        <Button
            android:id="@+id/postil_start_projection"
            style="@style/btn_style_pressend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:text="@string/button_start_projection" />

        <Button
            android:id="@+id/postil_stop_projection"
            style="@style/btn_style_pressend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:text="@string/button_stop_projection" />

        <Button
            android:id="@+id/exit"
            style="@style/btn_style_pressend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:text="@string/pelette_exit" />

    </LinearLayout>

</LinearLayout>
