<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorGray"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/item_tv_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/meet_id"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/item_tv_meet_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="3"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/meet_name"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/item_tv_meet_state"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1.5"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/meet_state"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/item_tv_meet_room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="3"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/meet_room_name"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/item_tv_secrecy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/secrecy"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/item_tv_start_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="2"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/meet_start_time"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/item_tv_stop_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="2"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/meet_end_time"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/item_tv_order_member"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/member_name"
        android:textColor="@color/black"
        android:textSize="14sp" />
</LinearLayout>